<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="vertical"
  android:padding="5dp"
  android:layout_height="fill_parent">





<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
<TextView 
android:text="@string/menustr" 
android:id="@+id/TextView01" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" android:textStyle="bold" android:textSize="25dp" android:textColor="#faf">
</TextView>
</LinearLayout>


<LinearLayout android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:orientation="vertical" android:gravity="center_horizontal" android:paddingTop="20dp">

<Button 
android:id="@+id/Button01" 
android:text="@string/loc1" android:layout_width="250dp" android:textStyle="bold" android:layout_height="50dp"></Button>

<Button 
android:id="@+id/Button02" 
android:text="@string/loc2" android:layout_width="250dp" android:textStyle="bold" android:layout_height="50dp"></Button>




<Button android:text="@string/rev" android:layout_width="250dp" android:id="@+id/Button04" android:textStyle="bold" android:layout_height="50dp"></Button><Button android:id="@+id/Button05" android:layout_height="50dp" android:textStyle="bold" android:text="@string/settings" android:layout_width="250dp"></Button>












<ToggleButton android:textStyle="bold" android:textOn="@string/smsoff" android:textOff="@string/smson" android:id="@+id/Button03" android:layout_width="250dp" android:layout_height="50dp"></ToggleButton>




</LinearLayout>



</LinearLayout>
