<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:padding="5dp">
  
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <TextView android:text="@string/settings" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/babypink" android:textStyle="bold" android:textSize="20dp">
  </TextView>  
  </LinearLayout>

<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="20dp">
<TextView android:text="@string/tarlat" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView02" android:textStyle="bold" android:paddingRight="10dp">
</TextView>
<EditText android:id="@+id/EditText01" android:layout_width="fill_parent" android:layout_height="40dp"></EditText>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="10dp">
<TextView android:text="@string/tarlon" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView03" android:textStyle="bold">
</TextView>
<EditText android:id="@+id/EditText02" android:layout_width="fill_parent" android:layout_height="40dp"></EditText>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="10dp">
<TextView android:text="@string/range" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView04" android:textStyle="bold" android:paddingRight="35dp">
</TextView>
<EditText android:id="@+id/EditText03" android:layout_width="fill_parent" android:layout_height="40dp"></EditText>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="10dp">
<TextView android:text="@string/action" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView05" android:textStyle="bold">
</TextView>

<RadioGroup android:id="@+id/RadioGroup01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<RadioButton android:text="@string/silent" android:id="@+id/RadioButton01" android:layout_width="wrap_content" android:layout_height="30dp"></RadioButton>
<RadioButton android:text="@string/vibrate" android:id="@+id/RadioButton02" android:layout_width="wrap_content" android:layout_height="30dp"></RadioButton>
<RadioButton android:text="@string/alarm" android:id="@+id/RadioButton03" android:layout_width="wrap_content" android:layout_height="30dp"></RadioButton>
</RadioGroup>
</LinearLayout>



<LinearLayout android:id="@+id/LinearLayout05" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="10dp" android:paddingBottom="10dp">
<TextView android:text="@string/toast" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView05" android:textStyle="bold">
</TextView>
<ToggleButton android:text="@+id/ToggleButton01" android:id="@+id/ToggleButton01" android:layout_width="wrap_content" android:layout_height="50dp"></ToggleButton>
</LinearLayout>

<LinearLayout android:orientation="horizontal" android:id="@+id/LinearLayout06" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:text="@string/save" android:id="@+id/Button01" android:layout_width="150dp" android:layout_height="40dp"></Button>
<Button android:text="@string/retrieve" android:id="@+id/Button02" android:layout_width="150dp" android:layout_height="40dp"></Button>
</LinearLayout>




</LinearLayout>

