<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:padding="5dp">

<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingBottom="5dp">
<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tarlat" android:gravity="center_vertical" android:paddingRight="10dp" android:textStyle="bold"></TextView>
<EditText android:id="@+id/EditText01" android:layout_width="180dp" android:layout_height="50dp"></EditText>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingBottom="10dp">
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tarlon" android:gravity="center_vertical" android:textStyle="bold"></TextView>
<EditText android:id="@+id/EditText02" android:layout_width="180dp" android:layout_height="50dp"></EditText>
</LinearLayout>


<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal">
<Button android:id="@+id/Button01" android:text="@string/rev" android:layout_width="fill_parent" android:layout_height="50dp" android:gravity="center_horizontal|center"></Button>


</LinearLayout>

</LinearLayout>
